--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,20 @@
 {
+  "api": {
+    "api3cf868ef": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "cyberrangeportal779c11f0"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    }
+  },
   "auth": {
     "cyberrangeportal326011f9": {
       "customAuth": false,
@@ -23,6 +39,31 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "function": {
+    "cyberrangeportal779c11f0": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_cyberrangeportal779c11f0_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "cyberrangeportal779c11f0"
+        }
+      ]
+    },
+    "AMPLIFY_function_cyberrangeportal779c11f0_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "cyberrangeportal779c11f0"
+        }
+      ]
     }
   }
 }
